--- a/ui/lobby/css/_layout.scss
+++ b/ui/lobby/css/_layout.scss
@@ -75,7 +75,7 @@
   @include mq-at-least-col4 {
     ---cols: 4; // ui/lobby/src/main.ts
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: fit-content(0) min-content 1fr repeat(3, fit-content(0));
+    grid-template-rows: auto min-content 1fr repeat(3, fit-content(0));
     grid-template-areas:
       'side   app     app     table'
       'tv     blog    blog    puzzle'
